Google map show themself.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
       <div class="it">
         <div class="search">Haha</div>
       </div>
-      <div class="it">3333333</div>
+      <div class="it"> <app-map></app-map> </div>
       <div class="it">444444</div>
 
     </div>
