--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,22 +31,45 @@ header {
     }
 }
 
-.body-grid {
+.grid {
     display: grid;
     grid-template-columns: auto 300px;
-    grid-template-rows: auto auto ;
-
-    .title{
+    grid-template-rows: auto 550px;
+    grid-template-areas: "title search" "map list";
+    @media (max-width: 800px) {
+        grid-template-columns: auto;
+        grid-template-rows: auto 510px auto auto;
+        grid-template-areas: "title" "map" "search" "list";
+    }
+    .title {
+        grid-area: title;
         font-size: 20px;
-        padding: 0 0 0 0;
     }
-
-    .search{
+    .search {
+        grid-area: search;
         height: 20px;
-        
     }
-
-    .it {
-        border: dashed gray 1px;
+    .map {
+        grid-area: map;
+    }
+    .list {
+        grid-area: list;
+    }
+    .grid__item {
+        padding: 10px;
+        .item__header {
+            height: 20px;
+            background-color: #EEEEEE;
+            font-size: 12px;
+            padding: 11px 0px 0 10px;
+            border-radius: 5px 5px;
+        }
+      
+        .borderBlock {
+            border: solid black 1px;
+            border-radius: 9px;
+            overflow: hidden;
+            height: 100%;
+        }
     }
 }
