--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,6 +48,11 @@ header {
     .search {
         grid-area: search;
         height: 20px;
+        input {
+            padding: 6px 0px 6px 8px;
+            border: solid #c2bfbf 1px;
+            border-radius: 6px;
+        }
     }
     .map {
         grid-area: map;
@@ -64,7 +69,6 @@ header {
             padding: 11px 0px 0 10px;
             border-radius: 5px 5px;
         }
-      
         .borderBlock {
             border: solid black 1px;
             border-radius: 9px;
