--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,10 +1,23 @@
 <div class="list">
-    <div *ngFor="let item of list" class="list__item">
-        <div class="item__title">{{item.name}}</div>
-        <div (click)="deleteItem($event)" class="item__button">
+
+    <div class="plainList" *ngIf="!filteredList.length && !noItemsFound">
+        <div *ngFor="let item of list" class="list__item">
+            <div class="item__title">{{item.name}}</div>
+            <div (click)="deleteItem($event)" class="item__button">
+            </div>
         </div>
     </div>
 
 
+    <div class="filteredList" *ngIf="filteredList && filteredList.length">
+        <div *ngFor="let item of filteredList" class="list__item">
+            <div class="item__title">{{item.name}}</div>
+            <div (click)="deleteItem($event)" class="item__button">
+            </div>
+        </div>
+    </div>
 
+    <div class="list__item" *ngIf="noItemsFound">
+        <div class="item__title">No marker was found</div>
+    </div>
 </div>
