Installed material library. Base creations for modal windows. Created 2 modal components,  create and delete modal components.

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -3,7 +3,7 @@
     <div class="plainList" *ngIf="!filteredList.length && !noItemsFound">
         <div *ngFor="let item of list" class="list__item">
             <div class="item__title">{{item.name}}</div>
-            <div (click)="deleteItem($event)" class="item__button">
+            <div (click)="openDialog(item)" class="item__deleteButton">
             </div>
         </div>
     </div>
@@ -12,7 +12,7 @@
     <div class="filteredList" *ngIf="filteredList && filteredList.length">
         <div *ngFor="let item of filteredList" class="list__item">
             <div class="item__title">{{item.name}}</div>
-            <div (click)="deleteItem($event)" class="item__button">
+            <div (click)="openDialog(item)" class="item__deleteButton">
             </div>
         </div>
     </div>
