--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        .item__button {
+        .item__deleteButton {
             border: solid red 0px;
             border-radius: 0px;
             background: url("../../assets/images/close.png");
