--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -1,5 +1,6 @@
 .list {
     height: 100%;
+    max-height: 600px;
     width: 100%;
     overflow-y: scroll;
     @media (max-width: 800px) {
@@ -13,41 +14,43 @@
         justify-content: space-between;
         align-items: center;
         .item__deleteButton {
-            border: solid red 0px;
+            border: solid  0px;
             border-radius: 0px;
             background: url("../../assets/images/close.png");
             background-size: contain;
             display: inline-block;
             height: 15px;
             width: 15px;
-            transition: border 0.1s, height 0.05s, width 0.05s; //background-size 0.2s;
+            // transition: border 0.1s, height 0.05s, width 0.05s; 
             &:hover {
                 border: solid red 2px;
+                height: 14px;
+                width: 14px;
                 border-radius: 15px;
                 background-size: 2px;
                 animation: button 0.5s;
             }
             &:active {
-                border: solid red 7px;
-                height: 4px;
-                width: 4px;
+               transform: scale(0.7);
             }
             @keyframes button {
                 0% {
                     border: solid rgb(255, 187, 187) 0px;
                     background-size: 12px;
+                    border-radius: 10px;
                 }
                 20% {
                     border: solid rgb(248, 126, 126) 1.2px;
                     background-size: 8px;
+                    border-radius: 12px;
                 }
                 40% {
-                    border-radius: 5px;
                     background-size: 7px;
+                    border-radius: 13px;
                 }
                 60% {
                     border: solid rgba(255, 53, 53, 0.815) 1.5px;
-                    border-radius: 7px;
+                    border-radius: 14px;
                     background-size: 5px;
                 }
                 100% {
