Add marker work. Delete marker work, on a map too.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,19 +16,19 @@
         <div class="grid">
             <div class="grid__item title">Assets Map</div>
             <div class="grid__item search">
-              <input placeholder="Search asset" [(ngModel)]="searchInput" />
-              <button  (click)="AddAssetDialog()" >Add Asset</button >
+                <input placeholder="Search asset" [(ngModel)]="assetSearchRequest" />
+                <button (click)="AddAssetDialog()">Add Asset</button >
             </div>
             <div class="grid__item map">
                 <div class="borderBlock">
                     <div class="item__header">Map</div>
-                    <app-map></app-map>
+                    <app-map [createdAsset]="newCreatedAsset"  [deletedAsset]="deletingAsset"></app-map>
                 </div>
             </div>
             <div class="grid__item list">
                 <div class="borderBlock">
                     <div class="item__header">Assets</div>
-                    <app-list (assetDeletedEvent)="deleteAsset($event)" [filterValue]="searchInput"  ></app-list>
+                    <app-list (assetDeletedEvent)="deleteAsset($event)" [searchRequest]="assetSearchRequest" [createdAsset]="newCreatedAsset"  ></app-list>
                 </div>
             </div>
 
