Added add btn class that show that it`s ivalid

--- a/src/app/modals/create-marker-modal/create-marker-modal.component.scss
+++ b/src/app/modals/create-marker-modal/create-marker-modal.component.scss
@@ -68,6 +68,11 @@
                 &.add {
                     border-radius: 5px;
                     background-color: #60B55F;
+
+                    &.inValid{
+                    background-color: #9ac499;
+                    color:#ffffffa6;
+                    }
                 }
             }
         }
