--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,7 +1,7 @@
 <div class="list">
 
     <div class="plainList" *ngIf="!filteredList.length && !noItemsFound">
-        <div *ngFor="let item of list async" class="list__item">
+        <div *ngFor="let item of list async" (click)="itemSelected(item)" class="list__item">
             <div class="item__title">{{item.name}}</div>
             <div (click)="openDialog(item)" class="item__deleteButton">
             </div>
@@ -10,7 +10,7 @@
 
 
     <div class="filteredList" *ngIf="filteredList && filteredList.length">
-        <div *ngFor="let item of filteredList async" class="list__item">
+        <div *ngFor="let item of filteredList async" (click)="itemSelected(item)" class="list__item">
             <div class="item__title">{{item.name}}</div>
             <div (click)="openDialog(item)" class="item__deleteButton">
             </div>
